Repaired scripting. Interaction between classes